--- a/HTML-CSS/Desafios/DesafioCordel- Modulo03/style.css
+++ b/HTML-CSS/Desafios/DesafioCordel- Modulo03/style.css
@@ -12,6 +12,10 @@
     padding: 0px;
 }
 
+html, body {
+    min-height: 100vh;
+}
+
 header{
     background-color: black;
     color: white;
@@ -22,6 +26,7 @@ header{
 
 header h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-variant: small-caps;
     font-size: 2.7em;
 }
 
@@ -39,6 +44,7 @@ header a{
 header a:hover{
     color: #F7A38D;
     transition-duration: 0.6s;
+    text-decoration: underline;
 }
 
 main {
