--- a/HTML-CSS/Desafios/DesafioCordel- Modulo03/style.css
+++ b/HTML-CSS/Desafios/DesafioCordel- Modulo03/style.css
@@ -84,6 +84,7 @@ section.imagem pre{
 
 #cartas {
     background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
